--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La panthère Web design à Lyon - Accueil</title>
 
     
 <!-- Analytics -->
