--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>La panthère Web design à Lyon - Page de contact</title>
 
     
 <!-- Analytics -->
