Ré-écriture des attributs alt

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
+    <meta name="description" content="Vous recherchez une équipe de designers compétents pour embellir votre site web avec des illustrations de qualité?  Faites confiance à l'agence La Panthère, votre entreprise de webdesign au coeur de Lyon!" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
@@ -29,8 +29,8 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html"
                 ><img
-                  src="img/agence-la-panthere-monochrome.svg"
-                  alt="paris web design logo agence web meilleure agence"
+                  src="img/agence-la-panthere-monochrome.webp"
+                  alt="Logo agence La Panthère web design"
                   height="40"
               /></a>
               <button
@@ -71,7 +71,7 @@
                 src="img/logo.webp"
                 class="center-block image-resize-mode"
                 width="100"
-                alt="Agence La Panthère, agence web paris, création logo paris"
+                alt="Logo avec une tête de panthère"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 Agence La Panthère
@@ -197,13 +197,13 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/1.wbep"
+                data-lightbox="img/1.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.webp"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="Des journeaux"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -224,7 +224,7 @@
                 ><img
                   src="img/2.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="une photographe prenant des photos"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -246,7 +246,7 @@
                 ><img
                   src="img/3.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="des composants électroniques"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -266,7 +266,7 @@
                 ><img
                   src="img/4.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="création de faire-parts"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
