--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
                 <li>
-                  <a href="index.html">Accueil</a>
-                </li>
-                <li>
-                  <a href="page2.html">page2 &gt;</a>
+                  <a href="Contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -78,7 +75,7 @@
               </h1>
               <div class="text-center">
                 <a
-                  href="page2.html"
+                  href="Contact.html"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
                   >Contact</a
@@ -173,7 +170,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                <br /><br /><a class="ltc-white bold-link" href="Contact.html"
                   >Contactez notre équipe</a
                 ><br />
               </p>
@@ -294,7 +291,7 @@
             </h2>
             <div class="col-sm-12 text-center">
               <a
-                href="page2.html"
+                href="Contact.html"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
                 >Contact</a
               >
