Cadre rouge sur l'image de présentation, modification des contrastes footer

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html"
-                ><img class="logo"
+              <a class="navbar-brand" href="index.html">
+                <img class="logo"
                   src="img/agence-la-panthere-monochrome.webp"
                   alt="Logo agence La Panthère web design"
                   height="40"
@@ -169,7 +169,7 @@
                 besoin d’une identité visuelle complète ou d’une refonte de
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
-                seront facilement trouvable sur les moteurs de recherche.
+                seront facilement trouvables sur les moteurs de recherche.
                 <br /><br /><a class="ltc-white bold-link" href="Contact.html"
                   >Contactez notre équipe</a
                 ><br />
