--- a/Contact.html
+++ b/Contact.html
@@ -53,7 +53,7 @@
         class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
         id="bloc-6"
       >
-        <div class="container bloc-lg">
+        <div class="bloc-lg">
           <div class="row">
             <div class="col-sm-12">
               <h1 class="text-center hero-bloc-text tc-white">
