--- a/Contact.html
+++ b/Contact.html
@@ -72,7 +72,7 @@
       <!-- bloc-6 END -->
       <!-- bloc-7 -->
       <div class="bloc bgc-white l-bloc" id="bloc-7">
-        <div class="container bloc-lg">
+        <div class="bloc-lg">
           <div class="row">
             <div class="col-sm-6">
               <form
@@ -82,11 +82,11 @@
                 fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
               >
                 <div class="form-group">
-                  <label> Nom </label>
+                  <label> Nom </label><br/>
                   <input id="name" class="form-control" required />
                 </div>
                 <div class="form-group">
-                  <label> Adresse email </label>
+                  <label> Adresse email </label><br/>
                   <input
                     id="email"
                     class="form-control"
@@ -95,7 +95,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label> Comment nous avez-vous connu ? </label>
+                  <label> Comment nous avez-vous connu ? </label><br/>
                   <input
                     class="form-control"
                     type="email"
