--- a/Contact.html
+++ b/Contact.html
@@ -28,21 +28,16 @@
       <!-- bloc-0 -->
       <div class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
-          <nav class="navbar row">
+          <nav class="navbar row entete">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html"
-                ><img
-                  src="img/agence-la-panthere-monochrome.webp"
-                  alt="Logo agence La Panthère web design"
-                  height="80"
-              /></a>
+              <a class="navbar-brand" href="index.html">
+                <img class="logo" src="img/agence-la-panthere-monochrome.webp" alt="Logo agence La Panthère web design" height="70"/>
+              </a>
             </div>
-            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-              <ul class="site-navigation nav navbar-nav">
-                <li>
+            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav menu">
+              
                   <a href="index.html">Accueil</a>
-                </li>
-              </ul>
+             
             </div>
           </nav>
         </div>
@@ -124,7 +119,7 @@
               </form>
             </div>
             <div class="col-sm-6">
-              <p>
+              <p class="adresse">
                 contact@agencelapanthere.com<br />2 place Sathonay 69001 Lyon<br />Ouvert
                 de 9h à 18h, du lundi au vendredi<br />
               </p>
