--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
       <!-- bloc-0 -->
       <div class="bloc bgc-white l-bloc" id="bloc-0">
         <div class="container bloc-sm">
-          <nav class="navbar row">
+          <nav class="navbar row entete">
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html">
                 <img class="logo"
                   src="img/agence-la-panthere-monochrome.webp"
                   alt="Logo agence La Panthère web design"
-                  height="80"
-              /></a>
+                  height="70"
+              />
+              </a>
              <button
                 id="nav-toggle"
                 type="button"
@@ -40,15 +41,13 @@
                 data-toggle="collapse"
                 data-target=".navbar-1"
               >
-              <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+              <span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
               </button>
             </div>
-            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-              <ul class="site-navigation nav navbar-nav">
-                <li>
+            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav menu">
+             
                   <a href="Contact.html">Contact</a>
-                </li>
-              </ul>
+              
             </div>
           </nav>
         </div>
