--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
-    <script src="./js/jquery-2.1.0.js" defer></script>
+    <!--<script src="./js/jquery-2.1.0.js" defer></script>
     <script src="./js/bootstrap.js" defer></script>
     <script src="./js/blocs.js" defer></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js" defer></script>
+    <script src="./js/gmaps.js" defer></script>-->
     <title>La panthère Web design à Lyon - Accueil</title>
   </head>
   <body>
@@ -35,7 +35,7 @@
               />
               </a>
             </div>
-            <div class=" collapse navbar-collapse navbar-1 special-dropdown-nav menu">
+            <div class=" collapse navbar-collapse  special-dropdown-nav menu">
                   <a href="Contact.html">Contact</a>
             </div>
           </nav>
@@ -294,7 +294,7 @@
               <p class="text-center white">
                 Agence La Panthère - Agence web basée à Lyon.<br />
               </p>
-              <div class="row row-no-gutters social">
+              <div class="row row-no-gutters social icones">
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
@@ -322,17 +322,6 @@
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4">
-                  Partenaires
-                  <ul>
-                    <li><a href="voiture.com">voiture.com</a></li>
-                    <li><a href="pizza.com">pizza.com</a></li>
-                    <li><a href="matoiture.com">matoiture.com</a></li>
-                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                  </ul>
                 </div>
               </div>
             </div>
