Bouton contact de l'entête descend sous le logo en version mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               />
               </a>
             </div>
-            <div class=" collapse navbar-collapse  special-dropdown-nav menu">
+            <div class="navbar-collapse  special-dropdown-nav menu">
                   <a href="Contact.html">Contact</a>
             </div>
           </nav>
