--- a/index.html
+++ b/index.html
@@ -125,11 +125,13 @@
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
             	<p class="citation">
-					"L'agence La Panthère est une excellente agence web!<br/>
-					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br/>
-					Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br/>
-					Maxime Guibard, PDG de À vos fourchettes
-				</p>
+                "L'agence La Panthère est une excellente agence web!<br/>
+                Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br/>
+                Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+              </p>
+              <p class="citation-auteur">
+					      Maxime Guibard, PDG de À vos fourchettes
+				      </p>
             </div>
           </div>
         </div>
