--- a/Contact.html
+++ b/Contact.html
@@ -72,11 +72,11 @@
                 fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
               >
                 <div class="form-group">
-                  <label> Nom </label><br/>
+                  <label for="name"> Nom </label><br/>
                   <input id="name" class="form-control" required />
                 </div>
                 <div class="form-group">
-                  <label> Adresse email </label><br/>
+                  <label for="email"> Adresse email </label><br/>
                   <input
                     id="email"
                     class="form-control"
@@ -85,7 +85,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label> Comment nous avez-vous connu ? </label><br/>
+                  <label for="input_504"> Comment nous avez-vous connu ? </label><br/>
                   <input
                     class="form-control"
                     type="email"
@@ -94,7 +94,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label>
+                  <label for="message">
                     Brief de votre projet (Ajoutez autant de détails que
                     nécessaire)<br /> </label
                   ><textarea
