--- a/index.html
+++ b/index.html
@@ -299,28 +299,28 @@
               <div class="row row-no-gutters social icones">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" alt="twitter"
+                    <a class="social" href="index.html" aria-label="twitter"
                       ><span class="fa fa-twitter icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" alt="facebook"
+                    <a class="social" href="index.html" aria-label="facebook"
                       ><span class="fa fa-facebook icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" alt="dribbble"
+                    <a class="social" href="index.html" aria-label="dribbble"
                       ><span class="fa fa-dribbble icon-md"></span
                     ></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html" alt="instagram"
+                    <a class="social" href="index.html" aria-label="instagram"
                       ><span class="fa fa-instagram icon-md"></span
                     ></a>
                   </div>
